--- a/data-analysis/docker-compose.yaml
+++ b/data-analysis/docker-compose.yaml
@@ -2,12 +2,21 @@ version: '3.8'
 
 services:
   jupyter:
-    image: jupyter/base-notebook
+    build: .
     ports:
       - "8888:8888"
     volumes:
-      - ./notebooks:/home/jovyan/work
-    user: root
+      - ./notebooks:/tf/notebooks
+    environment:
+      - JUPYTER_ENABLE_LAB=yes
+    deploy:
+      resources:
+        reservations:
+          devices:
+          - driver: nvidia
+            capabilities: [gpu]
+            count: all
+    command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root
 
 volumes:
   notebooks:
